Fixed spacing.

--- a/csmconnect/scheduler/static/scheduler/styles/homepage_header.css
+++ b/csmconnect/scheduler/static/scheduler/styles/homepage_header.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-evenly;
   color: black;
 }
 
